; ModuleID = '/home/carl/AnghaBench/git/extr_transport-helper.c_process_connect.c'
source_filename = "/home/carl/AnghaBench/git/extr_transport-helper.c_process_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transport = type { %struct.helper_data* }
%struct.helper_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8*, i8* }

@.str = private unnamed_addr constant [17 x i8] c"git-receive-pack\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"git-upload-pack\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.transport*, i32)* @process_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_connect(%struct.transport* %0, i32 %1) #0 {
  %3 = alloca %struct.transport*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.helper_data*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.transport* %0, %struct.transport** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.transport*, %struct.transport** %3, align 8
  %9 = getelementptr inbounds %struct.transport, %struct.transport* %8, i32 0, i32 0
  %10 = load %struct.helper_data*, %struct.helper_data** %9, align 8
  store %struct.helper_data* %10, %struct.helper_data** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0)
  store i8* %14, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %2
  %18 = load %struct.helper_data*, %struct.helper_data** %5, align 8
  %19 = getelementptr inbounds %struct.helper_data, %struct.helper_data* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %7, align 8
  br label %27

22:                                               ; preds = %2
  %23 = load %struct.helper_data*, %struct.helper_data** %5, align 8
  %24 = getelementptr inbounds %struct.helper_data, %struct.helper_data* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i8*, i8** %25, align 8
  store i8* %26, i8** %7, align 8
  br label %27

27:                                               ; preds = %22, %17
  %28 = load %struct.transport*, %struct.transport** %3, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @process_connect_service(%struct.transport* %28, i8* %29, i8* %30)
  ret i32 %31
}

declare dso_local i32 @process_connect_service(%struct.transport*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
